feat: error when events time collide
